--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -15,21 +15,17 @@
     <meta itemprop="description" content="Atomic SelfBot Help">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
-<body>
 
-<div class="content"> 
+<body>
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<p>Commands [71]</p></section>
-<a>Here, you will find all commands for Atomics SelfBot!</p>
+<a>Commands [71]</p></section>
+<a>Here, you will find all commands for Atomics SelfBot!</p></section>
 	
 <div class="arrow">
     <span></span></div>
-			</div>
-	<a> </p>
-	<a> </p>
-	<a> </p>
+	</div>
 </div>
     <a>Command 1  - ping            [            ] - Displays your ping</p>
 	<a> </p>
@@ -245,7 +241,7 @@
 	<a> </p> 
 	<section id="discordsection">
 	<h1>Join our Discord!</h1>
-<iframe src="https://discordapp.com/widget?id=694836380076998656&theme=dark" width="700" height="500" allowtransparency="true" frameborder="0"></iframe>
+<a><iframe src="https://discordapp.com/widget?id=694836380076998656&theme=dark" width="700" height="500" allowtransparency="true" frameborder="0"></iframe>
 	</section>
 <section id="home">
 <h1>Leave a Review</h1>
@@ -260,11 +256,12 @@
     <label for="star2" title="2 Stars">2 stars</label>
     <input type="radio" id="star1" name="rate" value="1" />
     <label for="star1" title="1 Star">1 star</label>
-</div>
 </section>
 
 	</div>
-    <a>2020 Atomics SelfBot</p>
+	    <div class="footer">
+       <a><i><a href="https://discord.gg/hSs3pF" target="_BLANK">2020 Atomics SelfBot</a></i>
+    </div>
 <style>
 .rate {
     float: left;
@@ -502,8 +499,8 @@ section p{
 .arrow{
     position: absolute;
     top: 60%;
-    left: 50%;
     transform: translate(-50%, -50%);
+    left: 50%;
     animation: cc 2s;
 }
 .arrow span{
