--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -239,6 +239,19 @@
 		</div>
     <a>Command 71 - combine             [name1, name2] - Combines 2 names into one</p>
 	<a> </p> 
+
+		</div>
+    <a>Command 72 - advice             [] - Gives you an advice</p>
+	<a> </p>
+
+		</div>
+    <a>Command 73 - hwid             [] - Sends your HWID (Hardware-Id) in the chat</p>
+	<a> </p>
+
+		</div>
+    <a>Command 74 - liedetector             [] - Detects if you are lying</p>
+	<a> </p>
+
 	<section id="discordsection">
 	<h1>Join our Discord!</h1>
 <a><iframe src="https://discordapp.com/widget?id=694836380076998656&theme=dark" width="300" height="700" allowtransparency="true" frameborder="0"></iframe>
