--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -20,7 +20,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<a>Commands [71]</p></section>
+<a>Commands [78]</p></section>
 <a>Here, you will find all commands for Atomics SelfBot!</p></section>
 	
 <div class="arrow">
@@ -239,17 +239,26 @@
 		</div>
     <a>Command 71 - combine             [name1, name2] - Combines 2 names into one</p>
 	<a> </p> 
-
 		</div>
     <a>Command 72 - advice             [] - Gives you an advice</p>
 	<a> </p>
-
 		</div>
     <a>Command 73 - hwid             [] - Sends your HWID (Hardware-Id) in the chat</p>
 	<a> </p>
-
 		</div>
     <a>Command 74 - liedetector             [] - Detects if you are lying</p>
+	<a> </p>
+		</div>
+    <a>Command 75 - fact             [] - Gives you a fun fact</p>
+	<a> </p>
+		</div>
+    <a>Command 76 - pwstrength             [content] - Tells you how secure the [content] is</p>
+	<a> </p>
+		</div>
+    <a>Command 77 - streambtc             [] - Streams the current Bitcoin price in your status</p>
+	<a> </p>
+		</div>
+    <a>Command 78 - name             [] - Gives you a random name</p>
 	<a> </p>
 
 	<section id="discordsection">
