--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -20,7 +20,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<a>Commands [78]</p></section>
+<a>Commands [80]</p></section>
 <a>Here, you will find all commands for Atomics SelfBot!</p></section>
 	
 <div class="arrow">
@@ -259,6 +259,12 @@
 	<a> </p>
 		</div>
     <a>Command 78 - name             [] - Gives you a random name</p>
+	<a> </p>
+		</div>
+    <a>Command 79 - wallpaper             [] - Gives you a nice wallpaper</p>
+	<a> </p>
+		</div>
+    <a>Command 80 - tti             [URL] - Converts the image from the URL to text an sends that in the chat</p>
 	<a> </p>
 
 	<section id="discordsection">
