--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -269,7 +269,7 @@
     <a>Command 79 - wallpaper             [] - Gives you a nice wallpaper</p>
 	<a> </p>
 		</div>
-    <a>Command 80 - tti             [URL] - Converts the image from the URL to text and sends that in the chat</p>
+    <a>Command 80 - itt             [URL] - Converts the image from the URL to text and sends that in the chat</p>
 	<a> </p>
 
 	<section id="discordsection">
