--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -26,7 +26,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<a>Commands [80]</p></section>
+<a>Commands [87]</p></section>
 <a>Here, you will find all commands for Atomics SelfBot!</p></section>
 <div class="arrow">
     <span></span></div>
@@ -270,6 +270,27 @@
 	<a> </p>
 		</div>
     <a>Command 80 - itt             [URL] - Converts the image from the URL to text and sends that in the chat</p>
+	<a> </p>
+		</div>
+    <a>Command 81 - kiss             [username] - Kisses a person for you</p>
+	<a> </p>
+		</div>
+    <a>Command 82 - erofeet             [URL] - Sends a random Erofeet picture/gif in the chat</p>
+	<a> </p>
+		</div>
+    <a>Command 83 - creategamertag             [] - Generates 10 gamertags for you</p>
+	<a> </p>
+		</div>
+    <a>Command 84 - hug             [username] - Hugges someone for you</p>
+	<a> </p>
+		</div>
+    <a>Command 85 - tickle             [username] - Tickles someone for you</p>
+	<a> </p>
+		</div>
+    <a>Command 86 - feed             [username] - Feeds someone for you</p>
+	<a> </p>
+		</div>
+    <a>Command 87 - smug             [username] - Smugges someone for you</p>
 	<a> </p>
 
 	<section id="discordsection">
