--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -26,7 +26,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<a>Commands [87]</p></section>
+<a>Commands [88]</p></section>
 <a>Here, you will find all commands for Atomics SelfBot!</p></section>
 <div class="arrow">
     <span></span></div>
@@ -291,6 +291,9 @@
 	<a> </p>
 		</div>
     <a>Command 87 - smug             [username] - Smugges someone for you</p>
+	<a> </p>
+		</div>
+    <a>Command 88 - slots             [] - Play slots in the discord chat</p>
 	<a> </p>
 
 	<section id="discordsection">
