--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -295,6 +295,9 @@
 		</div>
     <a>Command 88 - slots             [] - Play slots in the discord chat</p>
 	<a> </p>
+		</div>
+    <a>Command 89 - coffin             [] - If you dont know what this does then your old...</p>
+	<a> </p>
 
 	<section id="discordsection">
 	<h1>Join our Discord!</h1>
