--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -26,7 +26,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<a>Commands [88]</p></section>
+<a>Commands [90]</p></section>
 <a>Here, you will find all commands for Atomics SelfBot!</p></section>
 <div class="arrow">
     <span></span></div>
@@ -297,6 +297,9 @@
 	<a> </p>
 		</div>
     <a>Command 89 - coffin             [] - If you dont know what this does then your old...</p>
+	<a> </p>
+		</div>
+    <a>Command 90 - bad             [username] - Insult a user</p>
 	<a> </p>
 
 	<section id="discordsection">
