--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -26,7 +26,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<a>Commands [90]</p></section>
+<a>Commands [100]</p></section>
 <a>Here, you will find all commands for Atomics SelfBot!</p></section>
 <div class="arrow">
     <span></span></div>
@@ -300,6 +300,35 @@
 	<a> </p>
 		</div>
     <a>Command 90 - bad             [username] - Insult a user</p>
+	<a> </p>
+		</div>
+    <a>Command 91 - cum             [] - Sends a random Cum picture/gif in the chat</p>
+	<a> </p>
+		</div>
+    <a>Command 92 - classic             [] - Sends a random Classic picture/gif in the chat</p>
+	<a> </p>
+		</div>
+    <a>Command 93 - gasm             [] - Sends a random Gasm picture/gif in the chat</p>
+	<a> </p>		</div>
+    <a>Command 94 - pwankg             [] - Sends a random Pwankg picture/gif in the chat</p>
+	<a> </p>
+		</div>
+    <a>Command 95 - erokemo             [] - Sends a random Erokemo picture/gif in the chat</p>
+	<a> </p>
+		</div>
+    <a>Command 96 - eroyuri             [] - Sends a random Eroyuri picture/gif in the chat</p>
+	<a> </p>
+		</div>
+    <a>Command 97 - yuri             [] - Sends a random Yuri picture/gif in the chat</p>
+	<a> </p>
+		</div>
+    <a>Command 98 - holoero             [] - Sends a random Holoero picture/gif in the chat</p>
+	<a> </p>
+		</div>
+    <a>Command 99 - femdom             [] - Sends a random Femdom picture/gif in the chat</p>
+	<a> </p>
+		</div>
+    <a>Command 100 - goose             [] - Sends a random Goose picture/gif in the chat</p>
 	<a> </p>
 
 	<section id="discordsection">
