--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -27,6 +27,7 @@
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
 <a>Commands [98]</p></section>
+<a>@B4CK_Angel#2160 and AtomicFN#7727 made this Website!</p></section>
 <a>Here, you will find all commands for Atomics SelfBot!</p></section>
 <div class="arrow">
     <span></span></div>
