--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
 	<link rel="shortcut icon" type="image/png" href="/AtomicLogoWhiite.png"/>
     <meta name="description" content="SelfBot Help">
-    <meta name="keywords" content="SelfBot Help, csgo, hvh, AtomicFN#6969">
-    <meta name="author" content="AtomicFN#6969">
+    <meta name="keywords" content="SelfBot Help, csgo, hvh, AtomicFN#7727">
+    <meta name="author" content="AtomicFN#7727">
     <meta property="og:type" content="site">
     <meta property="og:title" content="Atomic SelfBot Help">
     <meta property="og:description" content="Commands for Atomics SelfBot">
-    <meta property="og:url" content="https://selfbothelp.herokuapp.com/Atomics%20Uploader.html">
+    <meta property="og:url" content="http://atomicsselfbot.herokuapp.com/AtomicsSelfBotHelp.html">
     <meta itemprop="name" content="Atomic SelfBot Help">
     <meta itemprop="description" content="Atomic SelfBot Help">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -34,7 +34,7 @@
 	</div>
     </section>
     <section id="utility"></section>
-    <h1>Utility Commands [34]</h1>
+    <h1>Utility Commands [36]</h1>
     </section>
     <a>ping            [            ] - Displays your ping</p>
     </div>
@@ -103,12 +103,16 @@
     <a>servericon            [] - Gets the Server Icon</p>
     </div>
     <a>itt             [URL] - Converts the image from the URL to text and sends that in the chat</p>
+    </div>
+    <a>backupname       [            ] - Back´s up you discord friends in a text file</p>
+    </div>
+    <a>pfpsteal       [user] - Steals someones (user) profile picture and sets it in your account</p>
     </section>
 
 
     </div>
         <section id="crypto"></section>
-            <h1>Crypto Currency [3]</h1>
+            <h1>Crypto Currencyk [3]</h1>
         </section>
 		</div>
         <a> btc             [] - Shows the current BTC price</p>
@@ -200,7 +204,7 @@
          </section>
 
          <section id="hackingcommands"></section>
-         <h1>Hacking Commands [11]</h1>
+         <h1>Hacking Commands [12]</h1>
             </section>
                 </div>
             <a> tokengen        [] - Generates 3 Discord Tokens</p>
@@ -224,10 +228,9 @@
             <a>pwstrength             [content] - Tells you how secure the [content] is</p>
                 </div>
             <a>webhookspam    [(Webhook ID) (Webhook Token) content] - Spam messages from a Webhook (Spamdelay is the same as your spam delay found in selfsettings.json)</p>
-                
+            </div>
+            <a>haste    [content] - Creates a hastebin</p>
             </section>
-
-             </section>
         
         <section id="NSFW"></section>
         <h1>NSFW Commands [15]</h1></section>
