--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -140,7 +140,7 @@
         </section>
         
         <section id="fun"></section>
-            <h1>Fun Commands [29]</h1>
+            <h1>Fun Commands [30]</h1>
             </section>
                 </div>
             <a>coffin             [] - If you dont know what this does then your old...</p>
@@ -200,6 +200,10 @@
             <a>ascii            [content    ] - Sends a message in ASCII</p>
                 </div>
             <a>question        [content     ] - Its an Q&A..</p>
+			    </div>
+            <a>ytsearch        [content     ] - Searches something on Youtube and sends the results in the chat</p>
+				</div>
+            <a>checkhost        [URL     ] - Checkes if the (URL) is either offline or online</p>
 
          </section>
 
