--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -26,7 +26,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<a>Commands [98]</p></section>
+<a>Commands [103]</p></section>
 <a>@B4CK_Angel#2160 and AtomicFN#7727 made this Website!</p></section>
 <a>Here, you will find all commands for Atomics SelfBot!</p></section>
 <div class="arrow">
@@ -112,7 +112,7 @@
 
     </div>
         <section id="crypto"></section>
-            <h1>Crypto Currencyk [3]</h1>
+            <h1>Crypto Currency Commands [3]</h1>
         </section>
 		</div>
         <a> btc             [] - Shows the current BTC price</p>
@@ -140,7 +140,7 @@
         </section>
         
         <section id="fun"></section>
-            <h1>Fun Commands [30]</h1>
+            <h1>Fun Commands [31]</h1>
             </section>
                 </div>
             <a>coffin             [] - If you dont know what this does then your old...</p>
