--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -26,7 +26,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<a>Commands [103]</p></section>
+<a>Commands [106]</p></section>
 <a>@B4CK_Angel#2160 and AtomicFN#7727 made this Website!</p></section>
 <a>Here, you will find all commands for Atomics SelfBot!</p></section>
 <div class="arrow">
@@ -34,7 +34,7 @@
 	</div>
     </section>
     <section id="utility"></section>
-    <h1>Utility Commands [36]</h1>
+    <h1>Utility Commands [39]</h1>
     </section>
     <a>ping            [            ] - Displays your ping</p>
     </div>
@@ -107,6 +107,12 @@
     <a>backupname       [            ] - Back´s up you discord friends in a text file</p>
     </div>
     <a>pfpsteal       [user] - Steals someones (user) profile picture and sets it in your account</p>
+    </div>
+    <a>playing       [content] - Changes your status to playing (content)</p>
+    </div>
+    <a>streaming       [content] - Changes your status to streaming (content)</p>
+    </div>
+    <a>watching       [content] - Changes your status to watching (content)</p>
     </section>
 
 
