--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -26,7 +26,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<a>Commands [106]</p></section>
+<a>Commands [107]</p></section>
 <a>@B4CK_Angel#2160 and AtomicFN#7727 made this Website!</p></section>
 <a>Here, you will find all commands for Atomics SelfBot!</p></section>
 <div class="arrow">
@@ -34,7 +34,7 @@
 	</div>
     </section>
     <section id="utility"></section>
-    <h1>Utility Commands [39]</h1>
+    <h1>Utility Commands [40]</h1>
     </section>
     <a>ping            [            ] - Displays your ping</p>
     </div>
@@ -113,6 +113,8 @@
     <a>streaming       [content] - Changes your status to streaming (content)</p>
     </div>
     <a>watching       [content] - Changes your status to watching (content)</p>
+    </div>
+    <a>rainbowrole       [mentionrole] - Changes the (mentionrole) to rainbow colors</p>
     </section>
 
 
