--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -26,7 +26,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<a>Commands [107]</p></section>
+<a>Commands [108]</p></section>
 <a>@B4CK_Angel#2160 and AtomicFN#7727 made this Website!</p></section>
 <a>Here, you will find all commands for Atomics SelfBot!</p></section>
 <div class="arrow">
@@ -148,7 +148,7 @@
         </section>
         
         <section id="fun"></section>
-            <h1>Fun Commands [31]</h1>
+            <h1>Fun Commands [32]</h1>
             </section>
                 </div>
             <a>coffin             [] - If you dont know what this does then your old...</p>
@@ -212,6 +212,8 @@
             <a>ytsearch        [content     ] - Searches something on Youtube and sends the results in the chat</p>
 				</div>
             <a>checkhost        [URL     ] - Checkes if the (URL) is either offline or online</p>
+				</div>
+            <a>pokemon        [name     ] - Gets a image of the specified pokemon</p>
 
          </section>
 
