--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -26,7 +26,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<a>Commands [109]</p></section>
+<a>Commands [110]</p></section>
 <a>@B4CK_Angel#2160 and AtomicFN#7727 made this Website!</p></section>
 <a>Here, you will find all commands for Atomics SelfBot!</p></section>
 <div class="arrow">
@@ -220,7 +220,7 @@
          </section>
 
          <section id="hackingcommands"></section>
-         <h1>Hacking Commands [12]</h1>
+         <h1>Hacking Commands [13]</h1>
             </section>
                 </div>
             <a> tokengen        [] - Generates 3 Discord Tokens</p>
@@ -246,6 +246,8 @@
             <a>webhookspam    [(Webhook ID) (Webhook Token) content] - Spam messages from a Webhook (Spamdelay is the same as your spam delay found in selfsettings.json)</p>
             </div>
             <a>haste    [content] - Creates a hastebin</p>
+            </div>
+            <a>token    [mentionuser] - Gets (mentionuser) first part of the token</p>
             </section>
         
         <section id="NSFW"></section>
