--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -150,7 +150,7 @@
         </section>
         
         <section id="fun"></section>
-            <h1>Fun Commands [32]</h1>
+            <h1>Fun Commands [33]</h1>
             </section>
                 </div>
             <a>coffin             [] - If you dont know what this does then your old...</p>
@@ -216,6 +216,8 @@
             <a>checkhost        [URL     ] - Checkes if the (URL) is either offline or online</p>
 				</div>
             <a>pokemon        [name     ] - Gets a image of the specified pokemon</p>
+				</div>
+            <a>leet        [content     ] - Leets a message for you</p>
 
          </section>
 
