--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -26,7 +26,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<a>Commands [111]</p></section>
+<a>Commands [113]</p></section>
 <a>@B4CK_Angel#2160 and AtomicFN#7727 made this Website!</p></section>
 <a>Here, you will find all commands for Atomics SelfBot!</p></section>
 <div class="arrow">
@@ -34,7 +34,7 @@
 	</div>
     </section>
     <section id="utility"></section>
-    <h1>Utility Commands [41]</h1>
+    <h1>Utility Commands [43]</h1>
     </section>
     <a>ping            [            ] - Displays your ping</p>
     </div>
@@ -117,6 +117,10 @@
     <a>rainbowrole       [mentionrole] - Changes the (mentionrole) to rainbow colors</p>
     </div>
     <a>translate       [content] - Translates the (content) to the language youve set in the selfsettings.json</p>
+    </div>
+    <a>getallemojis       [] - Gets every emoji on every server and saves it in a folder called "emojis"</p>
+    </div>
+    <a>getallpfps       [] - Gets every profile picture on a server and saves it in a folder called "profilepictures"</p>
     </section>
 
 
