--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -26,7 +26,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<a>Commands [113]</p></section>
+<a>Commands [114]</p></section>
 <a>@B4CK_Angel#2160 and AtomicFN#7727 made this Website!</p></section>
 <a>Here, you will find all commands for Atomics SelfBot!</p></section>
 <div class="arrow">
@@ -154,7 +154,7 @@
         </section>
         
         <section id="fun"></section>
-            <h1>Fun Commands [33]</h1>
+            <h1>Fun Commands [34]</h1>
             </section>
                 </div>
             <a>coffin             [] - If you dont know what this does then your old...</p>
@@ -222,6 +222,8 @@
             <a>pokemon        [name     ] - Gets a image of the specified pokemon</p>
 				</div>
             <a>leet        [content     ] - Leets a message for you</p>
+				</div>
+            <a>invisible        [     ] - Gives you an invisible profile picture</p>
 
          </section>
 
