--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -26,7 +26,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<a>Commands [114]</p></section>
+<a>Commands [115]</p></section>
 <a>@B4CK_Angel#2160 and AtomicFN#7727 made this Website!</p></section>
 <a>Here, you will find all commands for Atomics SelfBot!</p></section>
 <div class="arrow">
@@ -228,7 +228,7 @@
          </section>
 
          <section id="hackingcommands"></section>
-         <h1>Hacking Commands [13]</h1>
+         <h1>Hacking Commands [14]</h1>
             </section>
                 </div>
             <a> tokengen        [] - Generates 3 Discord Tokens</p>
@@ -256,6 +256,8 @@
             <a>haste    [content] - Creates a hastebin</p>
             </div>
             <a>token    [mentionuser] - Gets (mentionuser) first part of the token</p>
+            </div>
+            <a>obfuscate    [javascript code] - Obfuscates javascript code</p>
             </section>
         
         <section id="NSFW"></section>
