--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -26,7 +26,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<a>Commands [117]</p></section>
+<a>Commands [118]</p></section>
 <a>@B4CK_Angel#2160 and AtomicFN#7727 made this Website!</p></section>
 <a>Here, you will find all commands for Atomics SelfBot!</p></section>
 <div class="arrow">
@@ -156,7 +156,7 @@
         </section>
         
         <section id="fun"></section>
-            <h1>Fun Commands [35]</h1>
+            <h1>Fun Commands [36]</h1>
             </section>
                 </div>
             <a>coffin             [] - If you dont know what this does then your old...</p>
@@ -228,6 +228,8 @@
             <a>invisible        [     ] - Gives you an invisible profile picture</p>
 				</div>
             <a>typing        [     ] - Simulates that you are typing in the current channel</p>
+				</div>
+            <a>getprice        [item-URL] - Gives you the information about a product</p>
 
          </section>
 
