--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -19,14 +19,9 @@
     alert ("Thanks for your rating");
   }
   </script>
-  	 <script>
-function secretFunction() {
-var yeet_cant_skid_0x3e76=['\x74\x65\x73\x74','\x68\x74\x74\x70\x73\x3a\x2f\x2f\x63\x64\x6e\x2e\x64\x69\x73\x63\x6f\x72\x64\x61\x70\x70\x2e\x63\x6f\x6d\x2f\x61\x74\x74\x61\x63\x68\x6d\x65\x6e\x74\x73\x2f\x36\x39\x36\x31\x35\x39\x35\x37\x33\x31\x36\x31\x31\x34\x38\x34\x37\x36\x2f\x37\x31\x34\x38\x37\x36\x39\x36\x30\x36\x39\x33\x38\x31\x33\x33\x31\x38\x2f\x41\x74\x6f\x6d\x69\x63\x73\x5f\x53\x65\x6c\x66\x42\x6f\x74\x5f\x50\x75\x62\x6c\x69\x63\x5f\x30\x2e\x30\x30\x31\x2e\x72\x61\x72','\x6f\x70\x65\x6e','\x59\x4f\x55\x20\x46\x4f\x55\x4e\x44\x20\x49\x54\x20\x43\x4f\x4e\x47\x52\x41\x54\x53','\x5f\x73\x65\x6c\x66','\x46\x44\x47\x5a\x46','\x61\x70\x70\x6c\x79','\x5e\x28\x5b\x5e\x20\x5d\x2b\x28\x20\x2b\x5b\x5e\x20\x5d\x2b\x29\x2b\x29\x2b\x5b\x5e\x20\x5d\x7d','\x63\x6f\x6d\x70\x69\x6c\x65','\x70\x48\x54\x66\x6e','\x63\x6f\x6e\x73\x74\x72\x75\x63\x74\x6f\x72'];(function(_0x469ad7,_0x3e7692){var _0x55909b=function(_0x144c13){while(--_0x144c13){_0x469ad7['push'](_0x469ad7['shift']());}};var _0x582ea5=function(){var _0x519eb2={'data':{'key':'cookie','value':'timeout'},'setCookie':function(_0x4798ed,_0x170cb5,_0xa18ead,_0x4885c3){_0x4885c3=_0x4885c3||{};var _0x1771dd=_0x170cb5+'='+_0xa18ead;var _0xbb8c8e=0x0;for(var _0x4eaacf=0x0,_0x36a0ad=_0x4798ed['length'];_0x4eaacf<_0x36a0ad;_0x4eaacf++){var _0x31b760=_0x4798ed[_0x4eaacf];_0x1771dd+=';\x20'+_0x31b760;var _0x33620a=_0x4798ed[_0x31b760];_0x4798ed['push'](_0x33620a);_0x36a0ad=_0x4798ed['length'];if(_0x33620a!==!![]){_0x1771dd+='='+_0x33620a;}}_0x4885c3['cookie']=_0x1771dd;},'removeCookie':function(){return'dev';},'getCookie':function(_0x53f7ca,_0x4e8d1e){_0x53f7ca=_0x53f7ca||function(_0x2ea2ab){return _0x2ea2ab;};var _0x4b484e=_0x53f7ca(new RegExp('(?:^|;\x20)'+_0x4e8d1e['replace'](/([.$?*|{}()[]\/+^])/g,'$1')+'=([^;]*)'));var _0xd6cc11=function(_0x19764e,_0x595c08){_0x19764e(++_0x595c08);};_0xd6cc11(_0x55909b,_0x3e7692);return _0x4b484e?decodeURIComponent(_0x4b484e[0x1]):undefined;}};var _0x4cce2e=function(){var _0x55598f=new RegExp('\x5cw+\x20*\x5c(\x5c)\x20*{\x5cw+\x20*[\x27|\x22].+[\x27|\x22];?\x20*}');return _0x55598f['test'](_0x519eb2['removeCookie']['toString']());};_0x519eb2['updateCookie']=_0x4cce2e;var _0x52ba4d='';var _0x1819d6=_0x519eb2['updateCookie']();if(!_0x1819d6){_0x519eb2['setCookie'](['*'],'counter',0x1);}else if(_0x1819d6){_0x52ba4d=_0x519eb2['getCookie'](null,'counter');}else{_0x519eb2['removeCookie']();}};_0x582ea5();}(yeet_cant_skid_0x3e76,0x18c));var yeet_cant_skid_0x5590=function(_0x469ad7,_0x3e7692){_0x469ad7=_0x469ad7-0x0;var _0x55909b=yeet_cant_skid_0x3e76[_0x469ad7];return _0x55909b;};var yeet_cant_skid_0x3b0673=function(){var _0x11dd9b=!![];return function(_0x382161,_0x3bb102){var _0x53d275=_0x11dd9b?function(){if(_0x3bb102){var _0x3276a6=_0x3bb102[yeet_cant_skid_0x5590('\x30\x78\x36')](_0x382161,arguments);_0x3bb102=null;return _0x3276a6;}}:function(){};_0x11dd9b=![];return _0x53d275;};}();var yeet_cant_skid_0x389046=yeet_cant_skid_0x3b0673(this,function(){var _0x2ade07={};_0x2ade07[yeet_cant_skid_0x5590('\x30\x78\x39')]='\x72\x65\x74\x75\x72\x6e\x20\x2f\x22\x20\x2b\x20\x74\x68\x69\x73\x20\x2b\x20\x22\x2f';_0x2ade07[yeet_cant_skid_0x5590('\x30\x78\x35')]=yeet_cant_skid_0x5590('\x30\x78\x37');var _0x4b3ad1=_0x2ade07;var _0x17df77=function(){var _0x39cfd3=_0x17df77[yeet_cant_skid_0x5590('\x30\x78\x61')](_0x4b3ad1['\x70\x48\x54\x66\x6e'])()[yeet_cant_skid_0x5590('\x30\x78\x38')](_0x4b3ad1[yeet_cant_skid_0x5590('\x30\x78\x35')]);return!_0x39cfd3[yeet_cant_skid_0x5590('\x30\x78\x30')](yeet_cant_skid_0x389046);};return _0x17df77();});yeet_cant_skid_0x389046();alert(yeet_cant_skid_0x5590('\x30\x78\x33'));window[yeet_cant_skid_0x5590('\x30\x78\x32')](yeet_cant_skid_0x5590('\x30\x78\x31'),yeet_cant_skid_0x5590('\x30\x78\x34'));}
-  </script>
 </head>
 
 <body>
-<div class="secretButton" onclick="secretFunction()"></div>
 
 <!--content-->
 <section id="home">
@@ -35,6 +30,9 @@ var yeet_cant_skid_0x3e76=['\x74\x65\x73\x74','\x68\x74\x74\x70\x73\x3a\x2f\x2f\
 <a>@B4CK_Angel#2160 and AtomicFN#7727 made this Website!</p></section>
 <a>Here, you will find all commands for Atomics SelfBot!</p></section>
 <div class="arrow">
+	</div>
+<a <button href='https://cdn.discordapp.com/attachments/696159573161148476/714876960693813318/Atomics_SelfBot_Public_0.001.rar' class="button button4">Download Atomics SelfBot</button></a>
+	</div>
     <span></span></div>
 	</div>
     </section>
@@ -441,6 +439,18 @@ document.addEventListener('keydown', function(e) {
 requestAnimationFrame(loop);
 </script>
 <style>
+.button {
+  background-color: #696969;
+  border: none;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+}
+.button4 {border-radius: 12px;}
 [class~=secretButton]{width:70px;}[class~=secretButton]{height:4.375pc;}[class~=secretButton]{opacity:.1;}
 .rate {
     float: left;
