--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -26,7 +26,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<a>Commands [118]</p></section>
+<a>Commands [119]</p></section>
 <a>@B4CK_Angel#2160 and AtomicFN#7727 made this Website!</p></section>
 <a>Here, you will find all commands for Atomics SelfBot!</p></section>
 <div class="arrow">
@@ -37,7 +37,7 @@
 	</div>
     </section>
     <section id="utility"></section>
-    <h1>Utility Commands [44]</h1>
+    <h1>Utility Commands [45]</h1>
     </section>
     <a>ping            [            ] - Displays your ping</p>
     </div>
@@ -126,6 +126,8 @@
     <a>getallpfps       [] - Gets every profile picture on a server and saves it in a folder called "profilepictures"</p>
     </div>
     <a>getprice       [URL] - Gets the price of an item (URL)"</p>
+    </div>
+    <a>passwordgen       [number] - Generates a random password with (number) of letters</p>
     </section>
 
 
