--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -35,6 +35,10 @@
 	</div>
     <span></span></div>
 	</div>
+	<section id="patchnotes">
+	<h1>Atomics SelfBot VER 0.002 Patchnotes</h1>
+<a>Added passwordgen Command!</p></section>
+    </section>
     </section>
     <section id="utility"></section>
     <h1>Utility Commands [45]</h1>
