--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -31,13 +31,15 @@
 <a>Here, you will find all commands for Atomics SelfBot!</p></section>
 <div class="arrow">
 	</div>
-<a <button href='https://cdn.discordapp.com/attachments/696159573161148476/717057631386206208/Atomics_SelfBot_Public_0.002.rar' class="button button4">Download Atomics SelfBot VER 0.002</button></a>
+<a <button href='https://cdn.discordapp.com/attachments/696159573161148476/717061170736922745/Atomics_SelfBot_Public_0.002.rar' class="button button4">Download Atomics SelfBot VER 0.002</button></a>
 	</div>
     <span></span></div>
 	</div>
 	<section id="patchnotes">
 	<h1>Atomics SelfBot VER 0.002 Patchnotes</h1>
-<a>Added passwordgen Command!</p></section>
+	<a>Added passwordgen Command!</p></section>
+	<a>Fixed ban Command!</p></section>
+	<a>Fixed kick Command!</p></section>
     </section>
     </section>
     <section id="utility"></section>
