--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -37,9 +37,9 @@
 	</div>
 	<section id="patchnotes">
 	<h1>Atomics SelfBot VER 0.002 Patchnotes</h1>
-	<a>Added passwordgen Command!</p></section>
-	<a>Fixed ban Command!</p></section>
-	<a>Fixed kick Command!</p></section>
+	<a>Added passwordgen Command!</p>
+	<a>Fixed ban Command!</p>
+	<a>Fixed kick Command!</p>
     </section>
     </section>
     <section id="utility"></section>
