--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -26,7 +26,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<a>Commands [119]</p></section>
+<a>Commands [120]</p></section>
 <a>@B4CK_Angel#2160 and AtomicFN#7727 made this Website!</p></section>
 <a>Here, you will find all commands for Atomics SelfBot!</p></section>
 <div class="arrow">
@@ -43,7 +43,7 @@
     </section>
     </section>
     <section id="utility"></section>
-    <h1>Utility Commands [45]</h1>
+    <h1>Utility Commands [46]</h1>
     </section>
     <a>ping            [            ] - Displays your ping</p>
     </div>
@@ -134,6 +134,8 @@
     <a>getprice       [URL] - Gets the price of an item (URL)"</p>
     </div>
     <a>passwordgen       [number] - Generates a random password with (number) of letters</p>
+    </div>
+    <a>beautify        [code] - Cleanes up the (code)</p>
     </section>
 
 
@@ -241,7 +243,6 @@
             <a>typing        [     ] - Simulates that you are typing in the current channel</p>
 				</div>
             <a>getprice        [item-URL] - Gives you the information about a product</p>
-
          </section>
 
          <section id="hackingcommands"></section>
