--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -36,10 +36,11 @@
     <span></span></div>
 	</div>
 	<section id="patchnotes">
-	<h1>Atomics SelfBot VER 0.002 Patchnotes</h1>
+	<h1>Atomics SelfBot VER 0.003 Patchnotes</h1>
 	<a>Added passwordgen Command!</p>
 	<a>Fixed ban Command!</p>
 	<a>Fixed kick Command!</p>
+	<a>Added Beautify Command!</p>
     </section>
     </section>
     <section id="utility"></section>
