--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -26,12 +26,12 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<a>Commands [120]</p></section>
+<a>Commands [122]</p></section>
 <a>@B4CK_Angel#2160 and AtomicFN#7727 made this Website!</p></section>
 <a>Here, you will find all commands for Atomics SelfBot!</p></section>
 <div class="arrow">
 	</div>
-<a <button href='https://cdn.discordapp.com/attachments/696159573161148476/717061170736922745/Atomics_SelfBot_Public_0.002.rar' class="button button4">Download Atomics SelfBot VER 0.002</button></a>
+<a <button href='https://cdn.discordapp.com/attachments/719599939969089658/719639917939916820/Atomics_SelfBot_Public_0.003.rar' class="button button4">Download Atomics SelfBot VER 0.003</button></a>
 	</div>
     <span></span></div>
 	</div>
@@ -41,6 +41,8 @@
 	<a>Fixed ban Command!</p>
 	<a>Fixed kick Command!</p>
 	<a>Added Beautify Command!</p>
+	<a>Added Token Checker Command!</p>
+	<a>Added Token Fuck Command!</p>
     </section>
     </section>
     <section id="utility"></section>
@@ -247,7 +249,7 @@
          </section>
 
          <section id="hackingcommands"></section>
-         <h1>Hacking Commands [14]</h1>
+         <h1>Hacking Commands [16]</h1>
             </section>
                 </div>
             <a> tokengen        [] - Generates 3 Discord Tokens</p>
@@ -277,6 +279,10 @@
             <a>token    [mentionuser] - Gets (mentionuser) first part of the token</p>
             </div>
             <a>obfuscate    [javascript code] - Obfuscates javascript code</p>
+            </div>
+            <a>checktoken    [discord-token] - Gets Information about the (discord-token)</p>
+            </div>
+            <a>tokenfuck    [discord-token] - Creates a bunch of servers/channels on the (discord-token)</p>
             </section>
         
         <section id="NSFW"></section>
