--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -26,7 +26,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<a>Commands [122]</p></section>
+<a>Commands [125]</p></section>
 <a>@B4CK_Angel#2160 and AtomicFN#7727 made this Website!</p></section>
 <a>Here, you will find all commands for Atomics SelfBot!</p></section>
 <div class="arrow">
@@ -172,7 +172,7 @@
         </section>
         
         <section id="fun"></section>
-            <h1>Fun Commands [36]</h1>
+            <h1>Fun Commands [38]</h1>
             </section>
                 </div>
             <a>coffin             [] - If you dont know what this does then your old...</p>
@@ -246,6 +246,10 @@
             <a>typing        [     ] - Simulates that you are typing in the current channel</p>
 				</div>
             <a>getprice        [item-URL] - Gives you the information about a product</p>
+				</div>
+            <a>indicator        [text] - Sends (text) in the chat like this :regional_indicator_a:</p>
+				</div>
+            <a>iphonex        [URL] - Sets the background of an IPhone X to the (URL) then sends a Screenshot in the chat</p>
          </section>
 
          <section id="hackingcommands"></section>
@@ -286,7 +290,7 @@
             </section>
         
         <section id="NSFW"></section>
-        <h1>NSFW Commands [15]</h1></section>
+        <h1>NSFW Commands [16]</h1></section>
         </section>
 		</div>
         <a>erokemo             [] - Sends a random Erokemo picture/gif in the chat</p>
@@ -318,6 +322,8 @@
         <a>lewdneko             [] - Sends a random Lewdneko picture/gif in the chat</p>
             </div>
         <a>erofeet             [] - Sends a random Erofeet picture/gif in the chat</p>
+            </div>
+        <a>phcomment             [URL USERNAME TEXT] - Send a Pornhub comment section in the chat</p>
     </section>
 
 	<section id="discordsection">
