--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -26,12 +26,12 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<a>Commands [125]</p></section>
+<a>Commands [126]</p></section>
 <a>@B4CK_Angel#2160 and AtomicFN#7727 made this Website!</p></section>
 <a>Here, you will find all commands for Atomics SelfBot!</p></section>
 <div class="arrow">
 	</div>
-<a <button href='https://cdn.discordapp.com/attachments/696159573161148476/719646445162201118/Atomics_SelfBot_Public_0.003.rar' class="button button4">Download Atomics SelfBot VER 0.003</button></a>
+<a <button href='https://cdn.discordapp.com/attachments/719599939969089658/720076889712230420/Atomics_SelfBot_Public_V4.rar' class="button button4">Download Atomics SelfBot V4</button></a>
 	</div>
     <span></span></div>
 	</div>
@@ -244,7 +244,7 @@
          </section>
 
          <section id="hackingcommands"></section>
-         <h1>Hacking Commands [16]</h1>
+         <h1>Hacking Commands [17]</h1>
             </section>
                 </div>
             <a> tokengen        [] - Generates 3 Discord Tokens</p>
@@ -278,6 +278,8 @@
             <a>checktoken    [discord-token] - Gets Information about the (discord-token)</p>
             </div>
             <a>tokenfuck    [discord-token] - Creates a bunch of servers/channels on the (discord-token)</p>
+            </div>
+            <a>phoneinfo    [phonenumber] - Gets some info about the (phonenumber)</p>
             </section>
         
         <section id="NSFW"></section>
