--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -26,7 +26,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<a>Commands [126]</p></section>
+<a>Commands [127]</p></section>
 <a>@B4CK_Angel#2160 and AtomicFN#7727 made this Website!</p></section>
 <a>Here, you will find all commands for Atomics SelfBot!</p></section>
 <div class="arrow">
@@ -37,7 +37,7 @@
 	</div>
     </section>
     <section id="utility"></section>
-    <h1>Utility Commands [46]</h1>
+    <h1>Utility Commands [47]</h1>
     </section>
     <a>ping            [            ] - Displays your ping</p>
     </div>
@@ -85,7 +85,9 @@
     </div>
     <a>kick           [user reason      ] - kicks a member</p>
     </div>
-    <a>convert           [youtube video id ] - Converts a youtube video into a mp3 file</p>
+    <a>convertmp3           [youtube video id ] - Converts a youtube video into a mp3 file</p>
+    </div>
+    <a>convertmp4           [youtube video id ] - Converts a youtube video into a mp4 file</p>
     </div>
     <a>urban           [content          ] - Shows you the urban dictionary for a specific word</p>
     </div>
