--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -26,19 +26,19 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<a>Commands [127]</p></section>
+<a>Commands [128]</p></section>
 <a>@B4CK_Angel#2160 and AtomicFN#7727 made this Website!</p></section>
 <a>Here, you will find all commands for Atomics SelfBot!</p></section>
 <div class="arrow">
 	</div>
-<a <button href='https://cdn.discordapp.com/attachments/696159573161148476/721301438239604736/Atomics_SelfBot_Public_V5.rar' class="button button4">Download Atomics SelfBot V5</button></a>
+<a <button href='https://cdn.discordapp.com/attachments/720796365063585912/721888084731494450/Atomics_SelfBot_Public_V5.rar' class="button button4">Download Atomics SelfBot V5.1</button></a>
 	</div>
-<a <button="" href="http://download1075.mediafire.com/5wpmu2i9egag/2i7am62ult69qth/node_modules.rar" class="button button4">Download node_modules</a>
+<a <button="" href="https://download1521.mediafire.com/x01ocw7siyeg/9ts90f3o65vq5yd/node_modules.rar" class="button button4">Download node_modules</a>
     <span></span></div>
 	</div>
     </section>
     <section id="utility"></section>
-    <h1>Utility Commands [47]</h1>
+    <h1>Utility Commands [48]</h1>
     </section>
     <a>ping            [            ] - Displays your ping</p>
     </div>
@@ -133,6 +133,8 @@
     <a>passwordgen       [number] - Generates a random password with (number) of letters</p>
     </div>
     <a>beautify        [code] - Cleanes up the (code)</p>
+    </div>
+    <a>gmailbomb        [email text] - Spams the (email) with the (text) every 3 seconds</p>
     </section>
 
 
