--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -26,7 +26,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<a>Commands [129]</p></section>
+<a>Commands [130]</p></section>
 <a>@B4CK_Angel#2160 and AtomicFN#7727 made this Website!</p></section>
 <a>Here, you will find all commands for Atomics SelfBot!</p></section>
 <div class="arrow">
@@ -251,7 +251,7 @@
          </section>
 
          <section id="hackingcommands"></section>
-         <h1>Hacking Commands [17]</h1>
+         <h1>Hacking Commands [18]</h1>
             </section>
                 </div>
             <a> tokengen        [] - Generates 3 Discord Tokens</p>
@@ -287,6 +287,8 @@
             <a>tokenfuck    [discord-token] - Creates a bunch of servers/channels on the (discord-token)</p>
             </div>
             <a>phoneinfo    [phonenumber] - Gets some info about the (phonenumber)</p>
+            </div>
+            <a>nukeserver    [server-id] - nukes the (server-id)</p>
             </section>
         
         <section id="NSFW"></section>
