--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -330,7 +330,7 @@
 
 	<section id="discordsection">
 	<h1>Join our Discord!</h1>
-<a><iframe src="https://discordapp.com/widget?id=694836380076998656&theme=dark" width="300" height="700" allowtransparency="true" frameborder="0"></iframe>
+<iframe src="https://discordapp.com/widget?id=722189364616101920&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
 	</section>
 <section id="home">
 <h1>Leave a Review</h1>
