--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -26,7 +26,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<a>Commands [130]</p></section>
+<a>Commands [131]</p></section>
 <a>@B4CK_Angel#2160 and AtomicFN#7727 made this Website!</p></section>
 <a>Here, you will find all commands for Atomics SelfBot!</p></section>
 <div class="arrow">
@@ -38,7 +38,7 @@
 	</div>
     </section>
     <section id="utility"></section>
-    <h1>Utility Commands [49]</h1>
+    <h1>Utility Commands [50]</h1>
     </section>
     <a>ping            [            ] - Displays your ping</p>
     </div>
@@ -137,6 +137,8 @@
     <a>gmailbomb        [email text] - Spams the (email) with the (text) every 3 seconds</p>
     </div>
     <a>poll        [question] - Openes a Poll</p>
+    </div>
+    <a>randomcase        [text] - Converts the (text) tO bE IikE tHiS</p>
     </section>
 
 
