--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -26,7 +26,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands</h1>
-<a>Commands [132]</p></section>
+<a>Commands [133]</p></section>
 <a>@B4CK_Angel#2160 and AtomicFN#7727 made this Website!</p></section>
 <a>Here, you will find all commands for Atomics SelfBot!</p></section>
 <div class="arrow">
@@ -172,7 +172,7 @@
         </section>
         
         <section id="fun"></section>
-            <h1>Fun Commands [38]</h1>
+            <h1>Fun Commands [39]</h1>
             </section>
                 </div>
             <a>coffin             [] - If you dont know what this does then your old...</p>
@@ -250,6 +250,8 @@
             <a>indicator        [text] - Sends (text) in the chat like this :regional_indicator_a:</p>
 				</div>
             <a>iphonex        [URL] - Sets the background of an IPhone X to the (URL) then sends a Screenshot in the chat</p>
+				</div>
+            <a>fortune        [] - Gives you your fortune</p>
          </section>
 
          <section id="hackingcommands"></section>
