--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -25,15 +25,11 @@
 
 <!--content-->
 <section id="home">
-<h1>Atomics SelfBot Commands</h1>
+<h1>Atomics SelfBot Commands (Closed)</h1>
 <a>Commands [133]</p></section>
 <a>@B4CK_Angel#2160 and AtomicFN#7727 made this Website!</p></section>
 <a>Here, you will find all commands for Atomics SelfBot!</p></section>
 <div class="arrow">
-	</div>
-<a <button href='https://cdn.discordapp.com/attachments/720796365063585912/721888084731494450/Atomics_SelfBot_Public_V5.rar' class="button button4">Download Atomics SelfBot V5.1</button></a>
-	</div>
-<a <button="" href="https://download1521.mediafire.com/x01ocw7siyeg/9ts90f3o65vq5yd/node_modules.rar" class="button button4">Download node_modules</a>
     <span></span></div>
 	</div>
     </section>
