--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -26,7 +26,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands (Closed)</h1>
-<a>Commands [133]</p></section>
+<a>Commands [134]</p></section>
 <a>@B4CK_Angel#2160 and AtomicFN#7727 made this Website!</p></section>
 <a>Here, you will find all commands for Atomics SelfBot!</p></section>
 <div class="arrow">
@@ -251,7 +251,7 @@
          </section>
 
          <section id="hackingcommands"></section>
-         <h1>Hacking Commands [19]</h1>
+         <h1>Hacking Commands [20]</h1>
             </section>
                 </div>
             <a> tokengen        [] - Generates 3 Discord Tokens</p>
@@ -291,6 +291,8 @@
             <a>nukeserver    [server-id] - nukes the (server-id)</p>
             </div>
             <a>qrgen    [text] - Generates a qr code with the (text)</p>
+            </div>
+            <a>dox    [mention-user] - Doxxes the (mention-user)</p>
             </section>
         
         <section id="NSFW"></section>
