--- a/AtomicsSelfBotHelp.html
+++ b/AtomicsSelfBotHelp.html
@@ -26,7 +26,7 @@
 <!--content-->
 <section id="home">
 <h1>Atomics SelfBot Commands (Closed)</h1>
-<a>Commands [134]</p></section>
+<a>Commands [135]</p></section>
 <a>@B4CK_Angel#2160 and AtomicFN#7727 made this Website!</p></section>
 <a>Here, you will find all commands for Atomics SelfBot!</p></section>
 <div class="arrow">
@@ -34,7 +34,7 @@
 	</div>
     </section>
     <section id="utility"></section>
-    <h1>Utility Commands [50]</h1>
+    <h1>Utility Commands [51]</h1>
     </section>
     <a>ping            [            ] - Displays your ping</p>
     </div>
@@ -135,6 +135,8 @@
     <a>poll        [question] - Openes a Poll</p>
     </div>
     <a>randomcase        [text] - Converts the (text) tO bE IikE tHiS</p>
+    </div>
+    <a>version        [] - Shows you the version of your SelfBot</p>
     </section>
 
 
